# Search-Service-Django

./: .eslintrc.json  .gitignore  README.md  careers.json  dev-requirements.txt  gulp-config.tmpl.json  gulpfile.js  import_jobs_shellsafe.py  mappings.example.json  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.py  settings_local.tmpl.py  setup.py  tags.csv  urls.py
angular/: angular.json
angular/src/: index.html
archimedes/: README.md  angular.json  package-lock.json  package.json
archimedes/src/: index.html
core/: admin.py  apps.py  crawler.py  filters.py  forms.py  models.py  routers.py  saml_hooks.py  saml_views.py  signals.py  storage_backends.py  urls.py  views.py  widgets.py
core/migrations/: 0001_initial.py  0002_auto_20231116_2010.py
core/templatetags/: core_extras.py
core/utils/: jobs_utils.py  slugs.py
images/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
images/fixtures/: imagetags.json
images/migrations/: 0001_initial.py  0002_auto_20191211_2023.py  0002_auto_20200109_1355.py  0003_auto_20191211_2027.py  0003_auto_20200110_1706.py  0004_auto_20191211_2038.py  0004_auto_20200110_1951.py  0005_auto_20191211_2102.py  0005_image_photo_taken.py  0006_image_location.py  0006_imagetag_source.py  0007_auto_20191212_2107.py  0008_image_last_imported.py
locations/: admin.py  apps.py  models.py  serializers.py  storage_backends.py  urls.py  views.py
locations/fixtures/: all.json  campus.json  campustype.json  facility.json  group.json  grouptype.json  location.json  locationtype.json  parkinglot.json  parkingpermittype.json  pointofinterest.json  pointtype.json
marketing/: admin.py  filters.py  models.py  parsers.py  serializers.py  urls.py  views.py
org_units/: admin.py  models.py
podcasts/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
programs/: admin.py  apps.py  authentication.py  filters.py  models.py  serializers.py  urls.py  views.py
research/: admin.py  models.py  serializers.py  urls.py  views.py
seo/: admin.py  models.py  serializers.py  urls.py  views.py
teledata/: admin.py  apps.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
templates/: base-bootstrap.html  base.html  home.html  keyword-search.html  login.html  logout.html  search.html  side-menu.html
units/: admin.py  models.py  serializers.py  utils.py
(+310 files in other folders)
