
[project]
name = "UCF_Search_Service_Django"
version = "3.3.4"
dependencies = [
    "beautifulsoup4",
    "boto3",
    "Django~=3.2.0",
    "django-cors-headers",
    "djangorestframework",
    "django-filter==21.1",
    "django_mysql~=3.12.0",
    "django-saml2-auth-ai",
    "django-widget-tweaks",
    "drf-dynamic-fields",
    "fuzzywuzzy",
    "gunicorn",
    "lxml==4.9.3",
    "mysqlclient",
    "Pillow==10.0.0",
    "progress",
    "python-dateutil",
    "pysaml2",
    "python-Levenshtein==0.12.2",
    "raven",
    "requests",
    "sqlparse",
    "tabulate",
    "Unidecode"
]

[project.optional-dependencies]
dev = [
    "django-extensions",
    "spacy",
    "Werkzeug"
]
