
[project]
name = "UCF_Search_Service_Django"
version = "3.8.1"
dependencies = [
    "beautifulsoup4",
    "boto3",
    "croniter",
    "Django~=3.2.0",
    "django-cors-headers",
    "djangorestframework",
    "django-filter==21.1",
    "django-auditlog==2.3.0",
    "django-taggit",
    "django_mysql~=3.12.0",
    "django-saml2-auth-ai",
    "django-widget-tweaks",
    "drf-dynamic-fields",
    "fuzzywuzzy",
    "gunicorn",
    "lxml",
    "mysqlclient",
    "Pillow==10.0.0",
    "progress",
    "python-dateutil",
    "pysaml2~=7.3.0",
    "raven",
    "requests",
    "setuptools==75.3.0",
    "sqlparse",
    "tabulate",
    "Unidecode",
    "django-storages>=1.14.6",
    "pyopenssl>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "django-extensions",
    "python-Levenshtein==0.12.2",
    "spacy",
    "Werkzeug"
]
